--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -6,9 +6,9 @@ open_task:
     - apt-get update && apt-get install -y g++ libz-dev build-essential
   compile_script:
     - sed -i "/NOSFTPSTART/,/NOSFTPEND/d" zpaqfranz.cpp
-    - g++ -DSFTP -DHWSHA2 -g -O3 -Wall -Wextra -pthread zpaqfranz.cpp -lm -ldl -lz -o zpaqfranz 2>&1 | tee build_report.txt
+    - g++ -g -O3 -Wall -Wextra -pthread zpaqfranz.cpp -lm -ldl -lz -o zpaqfranz 2>&1 | tee build_report.txt
   test_script:
-    - ./zpaqfranz b -debug 2>&1 | tee test_report.txt
+    - ./zpaqfranz 2>&1 | tee test_report.txt
   always:
     report_artifacts:
       path: build_report.txt
