--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,11 @@
+name: Build zpaqfranz
+
+on:
+  push:
+    paths:
+      - 'zpaqfranz.cpp'    # Trigger solo se cambia zpaqfranz.cpp
+  workflow_dispatch:       # Permette di lanciare manualmente il workflow
+
 jobs:
   build-windows:
     runs-on: windows-latest
@@ -12,7 +20,7 @@ jobs:
           g++ -O3 -s -DSFTP -DGUI -DHWSHA2 -DHWBLAKE3 blake3_windows_gnu.S zpaqfranz.cpp -o zpaqfranz.exe -pthread -static -Wall -Wpedantic -frandom-seed=1234 -lurlmon
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v4   # <--- qui usiamo la versione aggiornata!
         with:
           name: zpaqfranz-64bit
           path: zpaqfranz.exe
